styling: added basic color scheme

--- a/client/src/custom.scss
+++ b/client/src/custom.scss
@@ -1,4 +1,7 @@
-$primary: #403234;
+$primary: #272727;
+$secondary: #ffe941;
+$light: #757575;
+$info: #f2f2f2;
 $success: #009703;
 $danger: #d01f21;
 
