--- a/client/src/pages/homepage-style.css
+++ b/client/src/pages/homepage-style.css
@@ -1,16 +1,11 @@
-
-.header {
-    margin-left: 58px;
-}
-
-.recomms {
-    /* background-color: red; */
-    padding-bottom: 50px;
-    padding-top: 10px;
-}
-
-.recomm-list {
-    margin-top: 30px;
+.background-container {
+    background-image: url('https://c0.wallpaperflare.com/preview/856/893/194/apartment-architecture-black-and-white-black-and-white.jpg');
+    background-position: center top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 26vh;
+    background-attachment: scroll;
+    padding-top: 50px;
 }
 
 #searchbtn {
