--- a/client/src/custom.scss
+++ b/client/src/custom.scss
@@ -1,7 +1,7 @@
 $primary: #272727;
-$secondary: #ffe941;
+$secondary: #ffd041;
 $light: #757575;
-$info: #f2f2f2;
+$info: #f8f8f8;
 $success: #009703;
 $danger: #d01f21;
 
