Feat: Image modal when carousel item is clicked

--- a/client/src/pages/accom-style.css
+++ b/client/src/pages/accom-style.css
@@ -18,6 +18,11 @@
     border-radius: 10px;
 }
 
+.modal-body img{
+    object-fit: cover;
+    width: 100%;
+}
+
 .desc_accom{
     max-width: 75%;
     text-align: justify;
