--- a/client/src/pages/accom-style.css
+++ b/client/src/pages/accom-style.css
@@ -37,6 +37,11 @@
     max-width: 35px;
     margin: auto;
 }
+.material-icon.icon{
+    height: 30px !important;
+    max-width: 35px;
+    margin: auto;
+}
 
 #accommDetail{
     margin-top: 20px;
@@ -105,3 +110,12 @@ h3{
 .reviewContainer{
     margin-top: 50px !important;
 }
+
+#amenity img{
+    margin-top: 10px !important;
+}
+
+#amenity p{
+    margin-top: 10px !important;
+}
+
