--- a/client/src/pages/accom-style.css
+++ b/client/src/pages/accom-style.css
@@ -127,3 +127,11 @@ h3{
 .form-label{
     font-weight: 500 !important;
 }
+
+#price-low, #price-high{
+    height: 100%;
+}
+
+.title-badge{
+    margin-left: 20px;
+}
